fix security vulnerabilities and update some components

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <meta property="og:url" content="https://cemetusach.cl/" />
   <meta property="og:description" content="Página del Centro de Estudiantes de Ingeniería en Metalurgia de la USACH, podrás contactarnos, hacer un reclamo, ver la malla de tu carrera, ver la directiva, etc." />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="yjgOnvsf2QoAYCAmf2jNoibCtYZgOwQHmXe5cZDQgX4" />
   <link rel="icon" type="image/x-icon" href="assets/images/logopng.png">
   <link rel="canonical" href="https://cemetusach.cl/" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,6 +22,5 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="https://apis.google.com/js/api.js"></script>
 </body>
 </html>
